exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #0`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="active capitalize" data-role="tab-general">general</a
    ><a href="#" class="capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mb-3 pt-0">
    <table class="general-table pb-3 table">
      <tbody>
        <tr>
          <td class="smallbold">Protocol</td>
          <td><span>http/2.0</span></td>
        </tr>
        <tr>
          <td class="smallbold">URL</td>
          <td>https://httpbin.org/delete</td>
        </tr>
        <tr>
          <td class="smallbold">Request Method</td>
          <td>
            <span class="d-flex text-left align-items-center">DELETE</span>
          </td>
        </tr>
        <tr>
          <td class="smallbold">Status Code</td>
          <td><span class="badge badge-success">200</span></td>
        </tr>
      </tbody>
    </table>
    <hr class="my-3" />
    <div class="matching-details mx-3">
      <h3 class="my-2">Match Information</h3>
      <p class="text-text-light">Nothing matched</p>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #1`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">:method</td>
            <td class="header-original">DELETE</td>
          </tr>
          <tr class="">
            <td class="header-name">:authority</td>
            <td class="header-original">httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">:scheme</td>
            <td class="header-original">https</td>
          </tr>
          <tr class="">
            <td class="header-name">:path</td>
            <td class="header-original">/delete</td>
          </tr>
          <tr class="">
            <td class="header-name">pragma</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">cache-control</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">accept</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-dest</td>
            <td class="header-original">empty</td>
          </tr>
          <tr class="">
            <td class="header-name">user-agent</td>
            <td class="header-original">
              Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36
              (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36
            </td>
          </tr>
          <tr class="">
            <td class="header-name">origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-site</td>
            <td class="header-original">same-origin</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-mode</td>
            <td class="header-original">cors</td>
          </tr>
          <tr class="">
            <td class="header-name">referer</td>
            <td class="header-original">https://httpbin.org/</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-encoding</td>
            <td class="header-original">gzip, deflate, br</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-language</td>
            <td class="header-original">
              uk-UA,uk;q=0.9,ru;q=0.8,en-US;q=0.7,en;q=0.6
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #2`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">status</td>
            <td class="header-original">200</td>
          </tr>
          <tr class="">
            <td class="header-name">date</td>
            <td class="header-original">Wed, 08 Apr 2020 13:05:09 GMT</td>
          </tr>
          <tr class="">
            <td class="header-name">content-type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">content-length</td>
            <td class="header-original">802</td>
          </tr>
          <tr class="">
            <td class="header-name">server</td>
            <td class="header-original">gunicorn/19.9.0</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-credentials</td>
            <td class="header-original">true</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #3`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="active capitalize" data-role="tab-general">general</a
    ><a href="#" class="capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mb-3 pt-0">
    <table class="general-table pb-3 table">
      <tbody>
        <tr>
          <td class="smallbold">Protocol</td>
          <td><span>http/2.0</span></td>
        </tr>
        <tr>
          <td class="smallbold">URL</td>
          <td>https://httpbin.org/put</td>
        </tr>
        <tr>
          <td class="smallbold">Request Method</td>
          <td><span class="d-flex text-left align-items-center">PUT</span></td>
        </tr>
        <tr>
          <td class="smallbold">Status Code</td>
          <td><span class="badge badge-success">200</span></td>
        </tr>
      </tbody>
    </table>
    <hr class="my-3" />
    <div class="matching-details mx-3">
      <h3 class="my-2">Match Information</h3>
      <p class="text-text-light">Nothing matched</p>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #4`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">:method</td>
            <td class="header-original">PUT</td>
          </tr>
          <tr class="">
            <td class="header-name">:authority</td>
            <td class="header-original">httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">:scheme</td>
            <td class="header-original">https</td>
          </tr>
          <tr class="">
            <td class="header-name">:path</td>
            <td class="header-original">/put</td>
          </tr>
          <tr class="">
            <td class="header-name">content-length</td>
            <td class="header-original">0</td>
          </tr>
          <tr class="">
            <td class="header-name">pragma</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">cache-control</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">accept</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-dest</td>
            <td class="header-original">empty</td>
          </tr>
          <tr class="">
            <td class="header-name">user-agent</td>
            <td class="header-original">
              Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36
              (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36
            </td>
          </tr>
          <tr class="">
            <td class="header-name">origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-site</td>
            <td class="header-original">same-origin</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-mode</td>
            <td class="header-original">cors</td>
          </tr>
          <tr class="">
            <td class="header-name">referer</td>
            <td class="header-original">https://httpbin.org/</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-encoding</td>
            <td class="header-original">gzip, deflate, br</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-language</td>
            <td class="header-original">
              uk-UA,uk;q=0.9,ru;q=0.8,en-US;q=0.7,en;q=0.6
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #5`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">status</td>
            <td class="header-original">200</td>
          </tr>
          <tr class="">
            <td class="header-name">date</td>
            <td class="header-original">Wed, 08 Apr 2020 13:05:01 GMT</td>
          </tr>
          <tr class="">
            <td class="header-name">content-type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">content-length</td>
            <td class="header-original">827</td>
          </tr>
          <tr class="">
            <td class="header-name">server</td>
            <td class="header-original">gunicorn/19.9.0</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-credentials</td>
            <td class="header-original">true</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #6`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="active capitalize" data-role="tab-general">general</a
    ><a href="#" class="capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mb-3 pt-0">
    <table class="general-table pb-3 table">
      <tbody>
        <tr>
          <td class="smallbold">Protocol</td>
          <td><span>http/2.0</span></td>
        </tr>
        <tr>
          <td class="smallbold">URL</td>
          <td>https://httpbin.org/patch</td>
        </tr>
        <tr>
          <td class="smallbold">Request Method</td>
          <td>
            <span class="d-flex text-left align-items-center">PATCH</span>
          </td>
        </tr>
        <tr>
          <td class="smallbold">Status Code</td>
          <td><span class="badge badge-success">200</span></td>
        </tr>
      </tbody>
    </table>
    <hr class="my-3" />
    <div class="matching-details mx-3">
      <h3 class="my-2">Match Information</h3>
      <p class="text-text-light">Nothing matched</p>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #7`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">:method</td>
            <td class="header-original">PATCH</td>
          </tr>
          <tr class="">
            <td class="header-name">:authority</td>
            <td class="header-original">httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">:scheme</td>
            <td class="header-original">https</td>
          </tr>
          <tr class="">
            <td class="header-name">:path</td>
            <td class="header-original">/patch</td>
          </tr>
          <tr class="">
            <td class="header-name">pragma</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">cache-control</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">accept</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-dest</td>
            <td class="header-original">empty</td>
          </tr>
          <tr class="">
            <td class="header-name">user-agent</td>
            <td class="header-original">
              Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36
              (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36
            </td>
          </tr>
          <tr class="">
            <td class="header-name">origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-site</td>
            <td class="header-original">same-origin</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-mode</td>
            <td class="header-original">cors</td>
          </tr>
          <tr class="">
            <td class="header-name">referer</td>
            <td class="header-original">https://httpbin.org/</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-encoding</td>
            <td class="header-original">gzip, deflate, br</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-language</td>
            <td class="header-original">
              uk-UA,uk;q=0.9,ru;q=0.8,en-US;q=0.7,en;q=0.6
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #8`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">status</td>
            <td class="header-original">200</td>
          </tr>
          <tr class="">
            <td class="header-name">date</td>
            <td class="header-original">Wed, 08 Apr 2020 13:04:50 GMT</td>
          </tr>
          <tr class="">
            <td class="header-name">content-type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">content-length</td>
            <td class="header-original">801</td>
          </tr>
          <tr class="">
            <td class="header-name">server</td>
            <td class="header-original">gunicorn/19.9.0</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-origin</td>
            <td class="header-original">https://httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-credentials</td>
            <td class="header-original">true</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #9`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="active capitalize" data-role="tab-general">general</a
    ><a href="#" class="capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mb-3 pt-0">
    <table class="general-table pb-3 table">
      <tbody>
        <tr>
          <td class="smallbold">Protocol</td>
          <td><span>http/2.0</span></td>
        </tr>
        <tr>
          <td class="smallbold">URL</td>
          <td>https://httpbin.org/get</td>
        </tr>
        <tr>
          <td class="smallbold">Request Method</td>
          <td><span class="d-flex text-left align-items-center">GET</span></td>
        </tr>
        <tr>
          <td class="smallbold">Status Code</td>
          <td><span class="badge badge-success">200</span></td>
        </tr>
      </tbody>
    </table>
    <hr class="my-3" />
    <div class="matching-details mx-3">
      <h3 class="my-2">Match Information</h3>
      <p class="text-text-light">Nothing matched</p>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #10`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">:method</td>
            <td class="header-original">GET</td>
          </tr>
          <tr class="">
            <td class="header-name">:authority</td>
            <td class="header-original">httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">:scheme</td>
            <td class="header-original">https</td>
          </tr>
          <tr class="">
            <td class="header-name">:path</td>
            <td class="header-original">/get</td>
          </tr>
          <tr class="">
            <td class="header-name">pragma</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">cache-control</td>
            <td class="header-original">no-cache</td>
          </tr>
          <tr class="">
            <td class="header-name">accept</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-dest</td>
            <td class="header-original">empty</td>
          </tr>
          <tr class="">
            <td class="header-name">user-agent</td>
            <td class="header-original">
              Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36
              (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36
            </td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-site</td>
            <td class="header-original">same-origin</td>
          </tr>
          <tr class="">
            <td class="header-name">sec-fetch-mode</td>
            <td class="header-original">cors</td>
          </tr>
          <tr class="">
            <td class="header-name">referer</td>
            <td class="header-original">https://httpbin.org/</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-encoding</td>
            <td class="header-original">gzip, deflate, br</td>
          </tr>
          <tr class="">
            <td class="header-name">accept-language</td>
            <td class="header-original">
              uk-UA,uk;q=0.9,ru;q=0.8,en-US;q=0.7,en;q=0.6
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #11`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">status</td>
            <td class="header-original">200</td>
          </tr>
          <tr class="">
            <td class="header-name">date</td>
            <td class="header-original">Wed, 08 Apr 2020 13:04:14 GMT</td>
          </tr>
          <tr class="">
            <td class="header-name">content-type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">content-length</td>
            <td class="header-original">698</td>
          </tr>
          <tr class="">
            <td class="header-name">server</td>
            <td class="header-original">gunicorn/19.9.0</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-origin</td>
            <td class="header-original">*</td>
          </tr>
          <tr class="">
            <td class="header-name">access-control-allow-credentials</td>
            <td class="header-original">true</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #12`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="active capitalize" data-role="tab-general">general</a
    ><a href="#" class="capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mb-3 pt-0">
    <table class="general-table pb-3 table">
      <tbody>
        <tr>
          <td class="smallbold">Protocol</td>
          <td><span>HTTP/1.1</span></td>
        </tr>
        <tr>
          <td class="smallbold">URL</td>
          <td>http://httpbin.org/post</td>
        </tr>
        <tr>
          <td class="smallbold">Request Method</td>
          <td><span class="d-flex text-left align-items-center">POST</span></td>
        </tr>
        <tr>
          <td class="smallbold">Status Code</td>
          <td><span class="badge badge-success">200</span></td>
        </tr>
      </tbody>
    </table>
    <hr class="my-3" />
    <div class="matching-details mx-3">
      <h3 class="my-2">Match Information</h3>
      <p class="text-text-light">Nothing matched</p>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #13`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">Host</td>
            <td class="header-original">httpbin.org</td>
          </tr>
          <tr class="">
            <td class="header-name">User-Agent</td>
            <td class="header-original">curl/7.64.1</td>
          </tr>
          <tr class="">
            <td class="header-name">Accept</td>
            <td class="header-original">*/*</td>
          </tr>
          <tr class="">
            <td class="header-name">Proxy-Connection</td>
            <td class="header-original">Keep-Alive</td>
          </tr>
          <tr class="">
            <td class="header-name">Content-Type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">Content-Length</td>
            <td class="header-original">14</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`Localhoste upload har and clickthru > Visits Localhoste, uploads har and clicks every request #14`] = `
<div data-role="log-details-modal-content">
  <nav class="nav-tabs nav-tabs-sm">
    <a href="#" class="capitalize" data-role="tab-general">general</a
    ><a href="#" class="active capitalize" data-role="tab-headers">headers</a
    ><a href="#" class="capitalize" data-role="tab-body">body</a>
  </nav>
  <div class="text-center mt-3 mb-2 position-relative">
    <button
      data-role="secure-payload-btn"
      type="button"
      class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
    >
      <span>Secure this payload</span>
    </button>
    <div role="group" class="btn-group">
      <button
        type="button"
        data-role="select-request-phase"
        class="capitalize btn btn-outline btn-sm"
      >
        request</button
      ><button
        type="button"
        data-role="select-response-phase"
        class="active capitalize btn btn-primary-light btn-sm"
      >
        response
      </button>
    </div>
    <hr class="my-3 p-0" />
  </div>
  <div class="mt-3 pt-0">
    <section class="request mt-2">
      <table class="header-table table table-striped">
        <tbody>
          <tr class="">
            <td class="header-name">Date</td>
            <td class="header-original">Wed, 26 Feb 2020 15:22:46 GMT</td>
          </tr>
          <tr class="">
            <td class="header-name">Content-Type</td>
            <td class="header-original">application/json</td>
          </tr>
          <tr class="">
            <td class="header-name">Content-Length</td>
            <td class="header-original">464</td>
          </tr>
          <tr class="">
            <td class="header-name">Connection</td>
            <td class="header-original">keep-alive</td>
          </tr>
          <tr class="">
            <td class="header-name">Server</td>
            <td class="header-original">gunicorn/19.9.0</td>
          </tr>
          <tr class="">
            <td class="header-name">Access-Control-Allow-Origin</td>
            <td class="header-original">*</td>
          </tr>
          <tr class="">
            <td class="header-name">Access-Control-Allow-Credentials</td>
            <td class="header-original">true</td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;
